# scalene-php

./: .gitignore  CMakeLists.txt  Makefile  README.md  example.php  profiler.php  scalene.php
benchmarks/: analysis.r  bench.py
benchmarks/benchmarksgame-scalene/binarytrees/: binarytrees.php  binarytrees.php-2.php  binarytrees.php-3.php  binarytrees.php-4.php  binarytrees.php-5.php  binarytrees.php-6.php  binarytrees.php-7.php
benchmarks/benchmarksgame-scalene/fannkuchredux/: fannkuchredux.php  fannkuchredux.php-2.php  fannkuchredux.php-3.php
benchmarks/benchmarksgame-scalene/fasta/: fasta.php-2.php  fasta.php-3.php
benchmarks/benchmarksgame-scalene/knucleotide/: knucleotide.php-4.php
benchmarks/benchmarksgame-scalene/mandelbrot/: mandelbrot.php  mandelbrot.php-3.php
benchmarks/benchmarksgame-scalene/nbody/: nbody.php-3.php
benchmarks/benchmarksgame-scalene/pidigits/: pidigits.php  pidigits.php-2.php  pidigits.php-3.php  pidigits.php-4.php  pidigits.php-5.php
benchmarks/benchmarksgame-scalene/regexredux/: regexredux.php
benchmarks/benchmarksgame-scalene/revcomp/: revcomp.php  revcomp.php-2.php  revcomp.php-3.php
benchmarks/benchmarksgame-scalene/spectralnorm/: spectralnorm.php  spectralnorm.php-2.php  spectralnorm.php-3.php
runtime/: scalene.cpp  scalene.h
runtime/tests/: test.c
